--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "dependencies": {
     "element-plus": "^1.0.2-beta.32",
-    "vue": "^3.0.5"
+    "sass": "^1.32.7",
+    "scss": "^0.2.4",
+    "vue": "^3.0.5",
+    "vue-router": "^4.0.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.1.4",
