--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@vitejs/plugin-vue-jsx": "^1.1.0",
     "element-plus": "^1.0.2-beta.32",
     "sass": "^1.32.7",
     "scss": "^0.2.4",
@@ -18,7 +19,7 @@
     "@vue/compiler-sfc": "^3.0.5",
     "@vuedx/typecheck": "^0.6.0",
     "@vuedx/typescript-plugin-vue": "^0.6.0",
-    "typescript": "^4.1.3",
+    "typescript": "^4.1.5",
     "vite": "^2.0.0"
   }
 }
